# qgis-js

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  compile_commands.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.cache/clangd/index/: MapLayer.hpp.29A8D8B5EE95959C.idx  PointXY.hpp.7874068C87221494.idx  QgisApi.cpp.AAF38A1B1DA85062.idx  QgsMapRendererJob.hpp.1140C71933E01743.idx  QgsMapRendererParallelJob.hpp.94B48A0006A6A051.idx  QgsMapRendererQImageJob.hpp.1C298A35CD4EBE06.idx  Rectangle.hpp.3C191D9118161D51.idx  qgis-js.cpp.E98757FF4BD784C7.idx
Real/: CMakeCache.txt
docs/examples/qgis-js-example-ol/: package.json
sites/dev/: index.html  package.json  vite.config.ts
sites/dev/public/projects/village/: pro.qgz  us_state_capitals.dbf  us_state_capitals.shp  us_state_capitals.shx
sites/dev/src/: data.ts  demo.css  index.ts  js.ts  jsonEditor.js  leaf.ts  leafEdit.ts  myTable.ts  table.css  table.ts
src/: CMakeLists.txt  qgis-js.cpp  qgis-native.cpp
src/api/: QgisApi.cpp  QgisApi.ts
src/model/: VectorLayer.hpp  VectorLayer.ts
src/thereBuild/: CMakeCache.txt
src/thisRelease/: CMakeCache.txt
